# dune-fem

./: .authorsalias  .cvsignore  .gitignore  .gitignore.orig  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  LICENSE  LICENSE.md  Makefile.am  README.md  RELEASENOTES  TODO  addauthors.sh  autogen.sh  check-doxygen.sh  check-headers.sh  config.h.cmake  configure.ac  dune-fem-config.cmake.in  dune-fem.pc.in  dune.module  feature-simple-tensor-todo  fenics-heat.py  fullcheck.sh  gcc.opts  icc.opts  localcontexttest.py  mainpage  make.inc.in  modules  modules.txt  mpi.opts  pyproject.toml  setup.py  setup.py.in  (+10 more)
cmake/modules/: .gitignore  AddPAPIFlags.cmake  AddPSCToolkitFlags.cmake  AddSIONLibFlags.cmake  AddSIONlibFlags.cmake  CMakeLists.txt  CommandLineHacks.cmake  CorrectWindowsPaths.cmake  DuneFemMacros.cmake  DuneFempyMacros.cmake  FemShort.cmake  FemTortureTests.cmake  FindAMGX.cmake  FindAmgXSolver.cmake  FindEndian.cmake  FindPAPI.cmake  FindPETSc.cmake  FindPETSc4py.cmake  FindPSCToolkit.cmake  FindPThreads.cmake  FindPackageMultipass.cmake  FindPetscAMGX.cmake  FindSIONlib.cmake  FindViennaCL.cmake  FindXDR.cmake  Findsionlib.cmake  GridSelector.cmake  ResolveCompilerPaths.cmake  UseModelCompiler.cmake
doc/: CMakeLists.txt  Makefile.am  axpy.tex  operator-concept.tex
doc/TODO/: AdaptManager  CheckPointer  Communicator  DataWriter  Function  LoadBalancer  OdeSolver  Parameter  Pass
doc/devel/: Makefile.am  codingstyle.wml  features.wml  indexidsets.wml  portability.wml  tests.wml
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile  Doxylocal  Makefile.am  bestpractice.wml  docrules  doxy-header.wml  dune-doxy.css  mainpage  modules  suggestions
dune/: CMakeLists.txt  Makefile.am  __init__.py  __init__.py.in  common.cc  dune-fempy-setup.py  femmpi.cc  fmatrix.hh  source.py  ufl.py
dune/fem/: CMakeLists.txt  Makefile.am  __init__.py  _adaptation.py  _fem.cc  _spaceadaptation.py  create.py  discretefunction.py  function.py  grid.py  gridfunction.py  gridpart.py  ipython.py  plotting.py  scheme.py  space.py  version.hh  view.py
dune/fempy/: CMakeLists.txt  parameter.hh
dune/fenics/: _compatibility.py
dune/generator/: database.py  generator.py
dune/geometry/: CMakeLists.txt  typemap.hh
dune/models/: CMakeLists.txt  elliptic.py  femufl.py  gridfunction.py  integrands.py  localfunction.py
dune/source/: CMakeLists.txt  __init__.py  basemodel.py  builtin.py  common.py  cplusplus.py  expression.py  fem.py
dune/ufl/: CMakeLists.txt  __init__.py  applyrestrictions.py  codegen.py  gatherderivatives.py  latex.py  linear.py  tensors.py
fem/: CMakeLists.txt  Makefile.am  version.hh  version.hh.in  version.inc.in
fem/basefunctions/: Makefile.am  basefunctionsets.cc  basefunctionsets.hh  basefunctionstorage.cc  basefunctionstorage.hh  storageinterface.hh
fem/caching/: cachepoints.hh  cacheprovider.cc  cacheprovider.hh  pointmapper.hh  pointprovider.cc  pointprovider.hh  twistprovider.cc  twistprovider.hh
fem/discretefunction/: Makefile.am  adaptivefunction.hh  blockvectorfunction.hh  dfadapt.hh  dfadapt_imp.cc  staticfunction.hh
fem/examples/: Makefile.am
fem/function/: Makefile.am  combinedfunction.hh  padaptivefunction.hh  productfunction.hh  vectorfunction.hh
fem/gridpart/: CMakeLists.txt  Makefile.am  adaptiveleafgridpart.hh  adaptiveleafindexset.hh  codimindexset.hh  defaultindexsets.hh  dunefemindexsets.hh  emptyindexset.hh  filteredgrid.hh  geometrygridpart.hh  gridpart.hh  gridpartutility.hh  gridpartview.hh  idbasedleafgridpart.hh  idbasedleafindexset.hh  periodicgridpart.hh  periodicindexset.hh  persistentindexsets.hh
fem/io/: Makefile.am  parameter.hh
fem/marking/: CMakeLists.txt  default.hh  doerfler.hh  maximum.hh
fem/misc/: Makefile.am  adaptiveindexmapper.hh  adaptiveindexmapper_inline.hh  advection.hh  array.hh  array_inline.hh  arrayallocator.hh  bartonnackmaninterface.hh  capabilities.hh  checkgeomaffinity.hh  codimmap.hh  combineinterface.hh  compositediscretefunctionspace.hh  debug.hh  double.hh  double_inline.hh  engineconcept.hh  entityfunction.hh  eoc.hh  eoc.tex  example.cc  fem.cc  femeoc.hh  femtimer.hh  femtuples.hh  fieldmatrixhelper.hh  finitevolume.hh  forloop.hh  fvfem.cc  fvfemalt.cc  gausspoints.hh  gridhelper.hh  gridwidth.hh  h1norm.hh  h1norm_inline.hh  identity.hh  inverseoperatorfactory.hh  l1error.hh  l2error.hh  l2norm.hh  (+31 more)
fem/operator/: Makefile.am  TODO  artificialdiffusion.hh  cachedlinearoperator.hh  diffusionoperator.hh  dirichletboundaryoperator.hh  discretefeopimp.hh  discreteoperatorimp.hh  elementintegrators.hh  elementintegratortraits.hh  feop.hh  feoperator.hh  integrationoperator.hh  inverseoperators.hh  lagrangedofhandler.hh  lagrangeinterpolation.hh  lagrangeinterpolation_inline.hh  matrixadapter.hh  minimizationoperator.hh  sourceprojection.hh
fem/pass/: Makefile.am  caller.hh  callerutility.hh  createpass.hh  dgdiscretemodel.hh  dgelliptpass.hh  dgelliptprimal.hh  dgmodelcaller.hh  dgpass.hh  discretemodel.hh  ellipticdiscretemodel.hh  ellipticmodelcaller.hh  insertfunctionpass.hh  ldgflux.hh  leng.hh  limitpass.hh  misc.hh  modelcaller.hh  modelcallerdefault.hh  pass.hh  problem.hh  problemcaller.hh  selection.hh  tuples.hh  typetraits.hh  utility.hh
fem/quadrature/: Makefile.am  cachepointlist.hh  cachequad.hh  cachingpointlist.hh  cachingquad.hh  cachingquadrature.hh  defaultquadratures.hh  dunequadratures.hh  elementpointlist.hh  elementpointlistbase.hh  elementquadrature.hh  femquadratures.hh  femquadratures_inline.hh  gausspoints.cc  gausspoints.hh  gausspoints_implementation.hh  idprovider.cc  idprovider.hh  include_cc.hh  integrator.hh  prismpoints.cc  prismpoints.hh  pyramidpoints.cc  pyramidpoints.hh  quadprovider.cc  quadprovider.hh  quadrature.cc  quadrature.hh  quadratureimp.hh  (+4 more)
lib/: CMakeLists.txt  Makefile.am  dunefemam2cmake.lib
m4/: CMakeLists.txt  Makefile.am  compatibility.m4  dune-fem.m4  dune_optional.m4  endian.m4  papi.m4  pardg.m4  petsc.m4  sionlib.m4  thread_local_storage.m4  umfpack.m4  version.m4  xdr_uint64_t.m4
(+2706 files in other folders)
