[build-system]
requires = ['cmake>=3.13', 'ninja', 'pip', 'requests', 'scikit-build', 'setuptools', 'wheel', 'dune-grid@git+https://gitlab.dune-project.org/core/dune-grid.git', 'dune-alugrid@git+https://gitlab.dune-project.org/extensions/dune-alugrid.git', 'dune-istl@git+https://gitlab.dune-project.org/core/dune-istl.git', 'dune-localfunctions@git+https://gitlab.dune-project.org/core/dune-localfunctions.git', 'mpi4py', 'matplotlib', 'scipy', 'fenics-ufl==2025.2.0']
build-backend = 'setuptools.build_meta'
