# don't follow the full GNU-standard; we definitely need automake >= 1.5
AUTOMAKE_OPTIONS = foreign 1.5

# do everything in the subdirs
SUBDIRS = pass space function quadrature operator solver io misc

# install all files to dune/fem 
femdir = $(includedir)/dune/fem

include $(top_srcdir)/am/global-rules
