# don't follow the full GNU-standard; we definitely need automake >= 1.5
AUTOMAKE_OPTIONS = foreign 1.5

SUBDIRS = common adaptivefunction blockvectorfunction 

discretefunctiondir =  $(includedir)/discretefunction
discretefunction_HEADERS = adaptivefunction.hh  dfadapt.hh  dfadapt_imp.cc \
blockvectorfunction.hh
