# don't follow the full GNU-standard; we definitely need automake >= 1.5
AUTOMAKE_OPTIONS = foreign 1.5

SUBDIRS = common adaptivefunction blockvectorfunction productfunction

functiondir =  $(includedir)/dune/fem/function
function_HEADERS = adaptivefunction.hh blockvectorfunction.hh productfunction.hh
