# don't follow the full GNU-standard; we definitely need automake >= 1.5
AUTOMAKE_OPTIONS = foreign 1.5

SUBDIRS = common \
          localfunction \
					adaptivefunction \
					blockvectorfunction \
					productfunction \
					vectorfunction

functiondir =  $(includedir)/dune/fem/function
function_HEADERS = adaptivefunction.hh \
                   blockvectorfunction.hh \
									 productfunction.hh \
									 vectorfunction.hh
